--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
 
   # State management
   flutter_bloc: ^8.0.1
+  auto_route: ^3.2.4
 
   # OpenApi dependency
   openapi_generator_annotations: ^3.3.0
@@ -64,6 +65,7 @@ dev_dependencies:
   ## OpenApi code generator dependencies
   build_runner: any
   openapi_generator: ^3.3.0
+  auto_route_generator: ^3.2.3
 
 
 # For information on the generic Dart part of this file, see the
